tests/NormalTests/paczka1/fuzzy1/45691336.err
Error in line 3: fprZIfC S445 95,5
Error in line 5: fprZIfC S833 9,8
Error in line 4: wAmgC S938 43,6
Error in line 12: Kqp S833 20,9
Error in line 10: nFwqhLFF S938 59,0
Error in line 22: fprZIfC S938 79,1
Error in line 31: wAmgC S938 17,9
Error in line 24: nFwqhLFF S938 49,6
Error in line 35: nFwqhLFF A302 86,1
